<?xml version="1.0" encoding="utf-8"?>
<!-- CodeCleaner_Start_5d694671-5cf3-4bce-8031-f5f49912df7f -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_news_sources"
        android:title="@string/menu_news_sources"/>
    <item
        android:id="@+id/nav_reading_feeds"
        android:title="@string/menu_reading_feeds"/>
    <item
        android:id="@+id/nav_keyword_rules"
        android:title="@string/menu_keyword_rules"/>
    <item
        android:id="@+id/nav_ai_rules"
        android:title="@string/menu_ai_rules"/>
    <item
        android:id="@+id/nav_repeated_sessions"
        android:title="@string/menu_repeated_sessions"/>
    <item
        android:id="@+id/nav_read_later"
        android:title="@string/menu_read_later"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/menu_settings"/>
</menu><!-- CodeCleaner_End_5d694671-5cf3-4bce-8031-f5f49912df7f -->



